# Affine_Uni_Bootloader

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml  release.yml
ci/: Dockerfile
cmake/toolchains/: arm-none-eabi-gcc.cmake
include/: boot_crypto.h  boot_image.h  boot_keys.h  boot_platform.h  boot_policy.h  boot_protocol.h  boot_security.h  boot_target_ids.h  bootloader.h
src/: boot_crypto.c  boot_image.c  boot_protocol.c  boot_security.c  bootloader.c  main.c
targets/common/: boot_target_common.c  boot_target_common.h
targets/stm32f072/: AL94.I-CUBE-USBD-COMPOSITE_conf.h  STM32F072CBTX_APP.ld  STM32F072CBTX_BOOTLOADER.ld  baremetal_runtime.c  board_config.h  boot_platform_stm32f072.c  main.c  main.h  stm32f0xx_it.c  usb.c  usb.h  usb_device.h  usbd_cdc_acm_if.c  usbd_cdc_acm_if.h  usbd_conf.c  usbd_conf.h  usbd_desc.c  usbd_desc.h
targets/stm32f401/: board_config.h
targets/stm32g431/: AL94.I-CUBE-USBD-COMPOSITE_conf.h  STM32G431CBUX_APP.ld  STM32G431CBUX_BOOTLOADER.ld  board_config.h  boot_platform_stm32g431.c  main.c  main.h  stm32g4xx_it.c  usb.c  usb.h  usb_device.h  usbd_cdc_acm_if.c  usbd_cdc_acm_if.h  usbd_conf.c  usbd_conf.h  usbd_desc.c  usbd_desc.h
targets/stm32h503/: AL94.I-CUBE-USBD-COMPOSITE_conf.h  STM32H503CBTX_APP.ld  STM32H503CBTX_BOOTLOADER.ld  baremetal_runtime.c  board_config.h  boot_platform_stm32h503.c  main.c  main.h  stm32h5xx_it.c  usb.c  usb.h  usbd_cdc_acm_if.c  usbd_cdc_acm_if.h  usbd_conf.h  usbd_desc.c  usbd_desc.h
targets/stub/: boot_platform_stub.c
tools/: boot_test.py  ci.sh  generate_boot_keys_header.py  release.sh
